@@ -181,7 +181,7 @@ Flags may be given as numeric values or as a comma-separated list of flag names
 that are passed to \fIhwloc_topology_set_flags()\fR.
 Those names may be substrings of actual flag names as long as a single one matches,
 for instance \fBdisallowed,thissystem_allowed\fR.
-The default is \fB0\fR (or \fBnone\fR).
+The default is \fB8\fR (or \fBimport\fR).
 .TP
 \fB\-\-merge\fR
 Do not show levels that do not have a hierarchical impact.
